fix: cropper height max size

--- a/src/Components/Modal/styles.css
+++ b/src/Components/Modal/styles.css
@@ -43,10 +43,6 @@
   border-radius: 10px;
 }
 
-.vwo-cropper-img {
-  width: 100%;
-}
-
 .vwo--hidden {
   display: none !important;
 }
